add tests & swagger-ui

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.data.mongodb.database = groww
 # jwt config
 jwt.secret = growwchatbotveryveryimportantveryveryimportantsecret
 jwt.expiration.time = 864000000
+
+# path matching strategy to enable swagger
+spring.mvc.pathmatch.matching-strategy = ant-path-matcher
