--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port = 8081
 spring.data.mongodb.host = localhost
 spring.data.mongodb.port = 27017
 spring.data.mongodb.database = groww
+spring.data.mongodb.auto-index-creation = true
 
 # jwt config
 jwt.secret = growwchatbotveryveryimportantveryveryimportantsecret
